--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>It's a great day</h1>
+<h1>It's a great day....yayy! ;)</h1>
 </body>
 </html>
